<resources>
    <string name="app_name">conde_exer4_Slambook</string>
    <string name="enter_name">Enter Name</string>
    <string name="name">Name:</string>
    <string name="title">Input your details here!</string>
    <string name="nickname">Nickname:</string>
    <string name="enter_nickname">Enter Nickname</string>
    <string name="age">Age:</string>
    <string name="enter_age">Enter Age</string>
    <string name="when_birthday">When is your Birthday?</string>
    <string name="enter_birthday">Enter Birthday</string>
    <string name="what_course">What is your Course?</string>
    <string name="enter_course">Enter Course</string>
    <string name="what_mobile">What is your Mobile Number?</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="what_fave">What is your Favorite Color?</string>
    <string name="enter_favorite_color">Enter Favorite Color</string>
    <string name="what_dream">What is your Ultimate Dream?</string>
    <string name="enter_ultimate_dream">Enter Ultimate Dream</string>
    <string name="who_crush">Who is your Secret Crush?</string>
    <string name="enter_secret_crush">Enter Secret Crush</string>
    <string name="what_message">What is your Message for Me?</string>
    <string name="enter_message">Enter Message</string>
    <string name="done">Done</string>
    <string name="thank_you">Thank You For Answering! :)</string>
</resources>
