<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="myName"
            type="com.example.exer4_conde_b4l.MyName" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/app_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:paddingStart="5dp"
            android:paddingTop="20dp"
            android:paddingEnd="5dp"
            android:text="@string/title"
            android:textAlignment="center"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/show_name"
            style="@style/constants"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="36sp"
            android:visibility="gone"
            android:text="@={myName.name}"/>

        <TextView
            android:id="@+id/show_nickname"
            style="@style/constants"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="24sp"
            android:visibility="gone"
            android:text="@={myName.nickname}"/>

        <TextView
            android:id="@+id/show_age"
            style="@style/constants"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="24sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/show_msg"
            style="@style/constants"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/thank_you"
            android:textAlignment="center"
            android:textSize="18sp"
            android:visibility="gone"
            tools:visibility="gone" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/detail_name"
                    style="@style/constants"
                    android:text="@string/name" />

                <EditText
                    android:id="@+id/edit_name"
                    style="@style/editBox"
                    android:ems="10"
                    android:hint="@string/enter_name"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/detail_nickname"
                    style="@style/constants"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nickname" />

                <EditText
                    android:id="@+id/edit_nickname"
                    style="@style/editBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/enter_nickname"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/detail_age"
                    style="@style/constants"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/age" />

                <EditText
                    android:id="@+id/edit_age"
                    style="@style/editBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/enter_age"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/detail_birthday"
                    style="@style/constants"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/when_birthday" />

                <EditText
                    android:id="@+id/edit_birthday"
                    style="@style/editBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/enter_birthday"
                    android:inputType="date" />

                <TextView
                    android:id="@+id/detail_course"
                    style="@style/constants"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/what_course" />

                <EditText
                    android:id="@+id/edit_course"
                    style="@style/editBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/enter_course"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/detail_mobileno"
                    style="@style/constants"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/what_mobile" />

                <EditText
                    android:id="@+id/edit_phone"
                    style="@style/editBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/enter_mobile_number"
                    android:inputType="phone" />

                <TextView
                    android:id="@+id/detail_color"
                    style="@style/constants"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/what_fave" />

                <EditText
                    android:id="@+id/edit_color"
                    style="@style/editBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/enter_favorite_color"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/detail_dream"
                    style="@style/constants"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/what_dream" />

                <EditText
                    android:id="@+id/edit_dream"
                    style="@style/editBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/enter_ultimate_dream"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/detail_crush"
                    style="@style/constants"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/who_crush" />

                <EditText
                    android:id="@+id/edit_crush"
                    style="@style/editBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/enter_secret_crush"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/detail_message"
                    style="@style/constants"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/what_message" />

                <EditText
                    android:id="@+id/edit_message"
                    style="@style/editBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/enter_message"
                    android:inputType="textMultiLine" />

                <Button
                    android:id="@+id/done_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="50dp"
                    android:paddingLeft="50dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="50dp"
                    android:paddingRight="50dp"
                    android:paddingBottom="20dp"
                    android:text="@string/done" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>


</layout>